@@ -1,5 +1,8 @@
 Changes in version 3.9.2
 
+- Small performance enhancement in fillChromPeaks.
+- Better support for MS > 1 data in fillChromPeaks: skip MS level 2 spectra for
+  filling in.
 - Add refineChromPeaks for XChromatogram and XChromatograms objects.
 - Add groupOverlaps function to group arbitrary ranges.
 - Add quantify,XCMSnExp object to quantify an XCMSnExp into a
